test/expected/explain_main_fiapc_hi.out
explain short int main( int, char *argv[] )
        ^
9: error: invalid main() return type "short"; must be "int" or a typedef thereof
